syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.centerinvest.sctd.grpc";

// Сервис аутентификации
service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Register(RegisterRequest) returns (AuthResponse);
}

// Запрос на авторизацию
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Запрос на регистрацию
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string department = 4;
}

// Ответ аутентификации
message AuthResponse {
  string token = 1;
  UserResponse user = 2;
}

// Пользователь
message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string department = 4;
  string role = 5;
} 