syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.centerinvest.sctd.grpc";

service LegalDocumentService {
  rpc SearchLegalDocuments(SearchLegalRequest) returns (SearchLegalResponse);
  rpc ImportLegalDocument(ImportLegalRequest) returns (DocumentResponse);
}

message SearchLegalRequest {
  string query = 1;
}

message SearchLegalResponse {
  repeated LegalDocumentDto documents = 1;
}

message LegalDocumentDto {
  string title = 1;
  string description = 2;
  string source_url = 3;
}

message ImportLegalRequest {
  string title = 1;
  string source_url = 2;
  string department = 3;
}

// Ссылка на DocumentResponse из document.proto
message DocumentResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string department = 4;
  UserResponse author = 5;
  string status = 6;
  string file_name = 7;
  string file_type = 8;
  int64 file_size = 9;
  string file_url = 10;
}

// Пользователь (для связи)
message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string department = 4;
  string role = 5;
} 